# stock_crawl

./: Dockerfile  error_records_1.csv  error_records_2.csv  error_records_3.csv  error_records_4.csv  error_records_5.csv  error_records_6.csv  pyproject.toml  stock_issue_dates.csv
crawl/: .env  config.py  errorr.py  main.py  삼성전자.csv
crawl/db/: connection.py  query.py  worker.py
crawl/services/: request_data.py  serch_code.py
error_csv/: error_records_1.csv
